--- a/analyzeApplyExtend-2/apply/index.html
+++ b/analyzeApplyExtend-2/apply/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<!-- Student's Name, Today's Date -->
+<!-- Shane Mack, 4/21/2024 -->
 <html lang="en">
 <head>
 	<title>Webpage Design</title>
 	<meta charset="utf-8">
     <link rel="stylesheet" href="css/apply07.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+    <link rel="shortcut icon" sizes="192x192" href="images/android-chrome-192.png">
 </head>
 <body>
 
@@ -29,39 +32,39 @@
         <!-- Use the main area to add the main content of the webpage -->
         <main>
 
-            <div>
-                    <div>
+            <article class="grid">
+                    <section>
                         <h3>CSS Grid Layout</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                    </div>
+                    </section>
 
-                    <div>
+                    <section>
                         <h3>Opacity</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                    </div>
+                    </section>
 
-                    <div>
+                    <section>
                         <h3>Shadows</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                    </div>
+                    </section>
 
-                    <div>
+                    <section>
                         <h3>Favicon</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                    </div>
+                    </section>
 
-                    <div>
+                    <aside>
                         <h2>Practice Makes Perfect</h2>
                         <p>Webpage design is a skill learned over time. You must practice to improve.</p>
-                    </div>
+                    </aside>
 
-            </div>
+            </article>
 
         </main>
 
         <!-- Use the footer area to add webpage footer content -->
         <footer>
-            <p>Designed by: Student's Name</p>
+            <p>Designed by: Shane Mack</p>
         </footer>
 
 	</div>
